--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <br>
         <br>
         <br>
-        <div id="text" contenteditable="true" style="border-style: groove; border-width:3px;border-color: red;height: 300px"></div>
+        <div id="text" contenteditable="true" style="border-style: groove; overflow:auto; border-width:3px;border-color: red;height: 300px"></div>
     </div>
     <script>
         function save() {
